Fixed file upload bug, removed out of place animation (#1208)

--- a/src/pages/admin/Editor/PageSettingsModal.module.scss
+++ b/src/pages/admin/Editor/PageSettingsModal.module.scss
@@ -7,12 +7,10 @@
   transition: all 0.5s;
   opacity: 0;
   border-radius: 16px;
-  transform: translate(-75%, 50%) rotateX(-45deg) rotateZ(-70deg);
+
   &.active {
     visibility: visible;
     border-radius: 0;
-    transition: all 0.5s;
     opacity: 1;
-    transform: translateX(0);
   }
 }
